--- a/ITTHELPER/Server/Templates/courses.html
+++ b/ITTHELPER/Server/Templates/courses.html
@@ -73,6 +73,10 @@
 								</div>
 							</div>
 						</div>
+						{% if user.is_staff %}
+							<a class="btn btn-dark" href="{% url 'create_course' %}"  style="max-width: 40%; text-align: center; 
+							justify-content: center;  margin-top: 5% ; margin-left: 42%;	align-items: center;">Add Course</a>
+							{% endif %}
 						<!-- End Single Blog -->
 					</div>
 				</div>
