--- a/ITTHELPER/accounts/Templates/signup.html
+++ b/ITTHELPER/accounts/Templates/signup.html
@@ -98,6 +98,12 @@ function validateSignUpForm() {
 										<input name="password2" type="password" placeholder="Confirm Password" required >
 									</div>
 									</div>
+									<div class="col-lg-6 col-md-6 col-12">
+									<div class="form-group">
+										<label for="is_company">Company User</label>
+										<input name="is_company" id="is_company" type="checkbox" >
+									</div>
+									</div>
 									<!-- <div class="col-lg-6 col-md-6 col-12">
 									<div class="form-group">
 										<input name="position" type="text" placeholder="Position">
