--- a/ITTHELPER/Server/Templates/training.html
+++ b/ITTHELPER/Server/Templates/training.html
@@ -1,85 +1,61 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Training{% endblock %}
-{% block body%}	
-		<!-- Pricing Table -->
-		<!-- Start Blog Area -->
-		<section class="blog section" id="blog" style="background: #f9f9f9;">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="section-title">
-							<h2>Keep Up With Our Most Recent Training Opportunities.</h2>
-							<img src="{% static 'img/logo2.png' %}" alt="#">
-							<p>A range of training opportunities are offered to enhance individual and group performance.</p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-				<style>
-								.date a{
-								text-decoration: none; /* إزالة تأثير الرابط */
-								}
-								.date a:hover {
-								background:#0C4257;
-								color:#000000;
-								}
-								</style>
-					<div class="col-lg-4 col-md-6 col-12">
-						<!-- Single Blog -->
-						<div class="single-news">
-							<div class="news-head">
-								<img src="{% static 'img/d1.png' %}" alt="#">
-							</div>
-							<div class="news-body">
-								<div class="news-content">
-									<div class="date"><a href="#">Apply Now</div>
-									<h2>ISEC</a></h2>
-									<p class="text">Training Requirements</p>
-								</div>
-							</div>
-						</div>
-						<!-- End Single Blog -->
-					</div>
-					<div class="col-lg-4 col-md-6 col-12">
-						<!-- Single Blog -->
-						<div class="single-news">
-							<div class="news-head">
-								<img src="{% static 'img/d2.png' %}" alt="#">
-							</div>
-							<div class="news-body">
-								<div class="news-content">
-									<div class="date"><a href="#">Apply Now</div>
-									<h2>Niotec</a></h2>
-									<p class="text">Training Requirements</p>
-								</div>
-							</div>
-						</div>
-						<!-- End Single Blog -->
-					</div>
-					<div class="col-lg-4 col-md-6 col-12">
-						<!-- Single Blog -->
-						<div class="single-news">
-							<div class="news-head">
-								<img src="{% static 'img/d3.png' %}" alt="#">
-							</div>
-							<div class="news-body">
-								<div class="news-content">
-									<div class="date"><a href="#">Apply Now</div>
-									<h2>Micron</a></h2>
-									<p class="text">Training Requirements</p>
-								</div>
-							</div>
-						</div>
-						<!-- End Single Blog -->
-						 {% if user.is_staff %}
-							<a class="btn btn-dark" href="{% url 'create_training' %}"  style="max-width: 100%; text-align: center; 
-							justify-content: center;  margin-top: 5% ; margin-right: 100%;	align-items: center;">Add Training</a>
-							{% endif %}
-					</div>
-				</div>
-			</div>
-		</section>
+{% block body %}
+<!-- Start Blog Area -->
+<style>
+    .date a {
+        text-decoration: none; /* Remove underline from links */
+    }
+    .date a:hover {
+        background: #0C4257;
+        color: #000000;
+    }
+    .news-head img {
+        width: 100%; /* Make sure the image takes up the full width of its container */
+        height: 200px; /* Fixed height for uniformity */
+        object-fit: cover; /* Ensure the image covers the container while maintaining aspect ratio */
+    }
+</style>
 
-{% endblock %}	
-			
+<section class="blog section" id="blog" style="background: #f9f9f9;">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section-title">
+                    <h2>Keep Up With Our Most Recent Training Opportunities.</h2>
+                    <img src="{% static 'img/logo2.png' %}" alt="#">
+                    <p>A range of training opportunities are offered to enhance individual and group performance.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            {% for training in training %}
+                <div class="col-lg-4 col-md-6 col-12 mb-4">
+                    <div class="single-news h-100">
+                        <div class="news-head">
+                            <img src="{{training.image.url}}" class="img-fluid" alt="img not found">
+                        </div>
+                        <div class="news-body">
+                            <div class="news-content">
+                                <h2>{{training.TrainingName}}</h2>
+                                <h5>{{training.TrainingCompany.first.CompanyName}}</h5>
+                                <p class="text">{{training.TrainingDate}}</p>
+                                <p class="text">{{training.TrainingTime}}</p>
+                                <div class="date"><a href="#">Apply Now</a></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
+        {% if user.is_superuser %}
+            <div class="text-center mt-4">
+                <a class="btn btn-dark" href="{% url 'create_training' %}">Add Training</a>
+            </div>
+        {% endif %}
+    </div>
+</section>
+{% endblock %}
