--- a/ITTHELPER/Server/static/css/style.css
+++ b/ITTHELPER/Server/static/css/style.css
@@ -55,6 +55,7 @@ html , body {
 	margin :0;
 	padding: 0;
 	box-sizing: border-box;
+	overflow: hidden;
 }
 body{
     font-family: 'Poppins', sans-serif;
