--- a/ITTHELPER/Server/Templates/path.html
+++ b/ITTHELPER/Server/Templates/path.html
@@ -35,9 +35,13 @@
 										<i class="icofont-education"></i>
 									</div>
 									<div class="single-content">
-										<h4>{{path.Paths | title}}</h4>
+										<h4>{{path.Paths | title }}</h4>
 										<p>{{path.describition}}</p>
-										<a href="{% url 'roadmap-pen_testing' %}" target="_blank">Road map<i class="fa fa-long-arrow-right"></i></a>
+										{% for roadmap in path.path.all %}
+											<a href="{{ roadmap.html_file }}" target="_blank">Road map<i class="fa fa-long-arrow-right"></i></a>
+										{% empty %}
+											<a> <i class="fa fa-long-arrow-right"></i> No roadmaps available!</a>
+										{% endfor %}
 									</div>
 								</div>
 							</div>
