--- a/ITTHELPER/Server/Templates/courses.html
+++ b/ITTHELPER/Server/Templates/courses.html
@@ -55,7 +55,7 @@
 
         {% if user.is_superuser %}
             <div class="text-center mt-4">
-                <a class="btn btn-dark" href="{% url 'create_training' %}">Add Training</a>
+                <a class="btn btn-dark kh-btn" href="{% url 'create_course' %}">Add Course</a>
             </div>
         {% endif %}
     </div>
