--- a/ITTHELPER/Server/Templates/training.html
+++ b/ITTHELPER/Server/Templates/training.html
@@ -52,8 +52,8 @@
         </div>
 
         {% if user.is_superuser %}
-            <div class="text-center mt-4">
-                <a class="btn btn-dark" href="{% url 'create_training' %}">Add Training</a>
+            <div class="text-center mt-4 btn-row ">
+                <a class="btn btn-dark kh-btn" href="{% url 'create_training' %}">Add Training</a>
             </div>
         {% endif %}
     </div>
