--- a/ITTHELPER/Server/Templates/courses.html
+++ b/ITTHELPER/Server/Templates/courses.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Training{% endblock %}
+{% block title %}Courses{% endblock %}
 {% block body %}
 <!-- Start Blog Area -->
 <style>
