--- a/ITTHELPER/Server/Templates/guides.html
+++ b/ITTHELPER/Server/Templates/guides.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Guides{% endblock %}
+{% block title %}Interviews{% endblock %}
 {% block body%}	
 		<!-- Start Portfolio Details Area -->
 		<section class="pf-details section" style="background: #f9f9f9;">
