--- a/ITTHELPER/Server/Templates/navbar.html
+++ b/ITTHELPER/Server/Templates/navbar.html
@@ -39,7 +39,7 @@
 											<li><a href="{% url 'path' %}">Career Path</a></li>
 											<li><a href="{% url 'events' %}">Events</a></li>
 											<li><a href="{% url 'cv' %}">CV</a></li>
-											<li><a href="{% url 'guides' %}">Guides</a></li>
+											<li><a href="{% url 'guides' %}">Interviews</a></li>
 											<li><a href="{% url 'contact_us'%}">Contact Us</a></li>
 											<li><a href="{% url 'feedback' %}">Feedback </a></li>
 											<!-- <li><a href="{% url 'feedback' %}">Feedback </a></li> -->
