--- a/ITTHELPER/accounts/Templates/login.html
+++ b/ITTHELPER/accounts/Templates/login.html
@@ -100,7 +100,7 @@
         </div>
         <div class="col-lg-12 col-md-12 col-12"  style="Color: #fff;">
             <div class="google-signup">
-                <a href="" class="btn btn-dark btn-google">
+                <a href="{% url 'google-login' %}" class="btn btn-dark btn-google">
                     <img src="{% static 'img/download.png' %}" alt="Log In With Google" class="google-icon">
                     <span>Log In With Google</span>
                 </a>
@@ -113,6 +113,7 @@
         </div>
         
     </div>
+
 </form>
 
             </div>
