--- a/ITTHELPER/Server/Templates/addevents.html
+++ b/ITTHELPER/Server/Templates/addevents.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title%}addCourse{% endblock %}
+{% block title%}Add Events{% endblock %}
 {% block body %} 
 <style>
     .form-group label {
