--- a/ITTHELPER/Server/Templates/base.html
+++ b/ITTHELPER/Server/Templates/base.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,10 +12,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
 		<!-- Title -->
-        <title>Home - IT Tech Track Helper</title>
+        <title>{% block title %}{% endblock %}</title>
 		
 		<!-- Favicon -->
-        <link rel="icon"  href="{% static 'images/logo2.png' %}">
+        <link rel="icon"  href="{% static 'img/logo2.png' %}">
 		
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
