--- a/ITTHELPER/Server/Templates/events.html
+++ b/ITTHELPER/Server/Templates/events.html
@@ -33,7 +33,7 @@
 									</div>
 									<h4 class="title">{{event.event}}</h4>
 									<div class="price">
-										<p class="amount">{{event.Price}}<span>/ Per Person</span></p>
+										<p class="amount">${{event.Price}}<span>/ Per Person</span></p>
 									</div>	
 								</div>
 								<!-- Table List -->
