--- a/ITTHELPER/Server/Templates/roadmap-blue.html
+++ b/ITTHELPER/Server/Templates/roadmap-blue.html
@@ -4,7 +4,7 @@
     
     <link rel="stylesheet" href="{% static 'css/roadmap.css' %}">
 <div class="container" style="padding-top: 550px;">
-        <h1><big><u>Blue Teaming Roadmap</u></big></h1>
+        <h1 style="margin-top: 140px;"><big><u>Blue Teaming Roadmap</u></big></h1>
         <div class="roadmap">
             <div class="stage">
                 <h2>First Step (<u>Basic IT Skills</u>)</h2>
