--- a/ITTHELPER/accounts/Templates/profile.html
+++ b/ITTHELPER/accounts/Templates/profile.html
@@ -137,9 +137,9 @@
         <h3>{{user.first_name|title}}'s Profile</h3>
       </div>
       <ul class="list-unstyled components">
-        <li>
-          <a href="{% url 'profile' %}">About</a>
-        </li>
+        <!-- <li>
+          <a href="{% url 'profile' %}">Profile</a>
+        </li> -->
         <li>
           <a href="{% url 'home' %}">Home</a>
         </li>
