--- a/ITTHELPER/Server/Templates/addcourse.html
+++ b/ITTHELPER/Server/Templates/addcourse.html
@@ -23,34 +23,27 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>Providing a range of courses</h2>
+							<h2>Providing a range of Courses</h2>
 							<img src="{% static 'img/logo2.png' %}" alt="#">
 							<p>The best suggestions of courses saves you effort and time.</p>
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row justify-content-center">
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="container my-5 profile-container">
                             <h2>Course Form</h2>
                                 <form method="post" enctype="multipart/form-data" >
                                     {% csrf_token %}
                                     {% for field in form %}
-                                    <div class="row">
-                                        <div class="form-group">
-                                        {{ field.label_tag }}
+                                    <div class="form-group">
+                                        <label class="form-label" for="{{ field.id_for_label }}">{{ field.label }}</label>
                                         {{ field }}
-                                    {% if field.help_text %}
-                                    <small class="form-text text-muted">{{ field.help_text }}</small>
-                                    {% endif %}
-                                    {% for error in field.errors %}
-                                    <div class="invalid-feedback">
-                                    {{ error }}
+                                        {% if field.help_text %}
+                                            <small class="form-text text-muted">{{ field.help_text }}</small>
+                                        {% endif %}
                                     </div>
-                                    {% endfor %}
-                                            </div>
-                                        </div>
-                                    {% endfor %}
+                                {% endfor %} 
                                     <button type="submit" class="btn btn-dark">Submit</button>
                                 </form>
                         </div>
