--- a/ITTHELPER/Server/Templates/addevents.html
+++ b/ITTHELPER/Server/Templates/addevents.html
@@ -23,16 +23,16 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="section-title">
-							<h2>Providing a range of courses</h2>
+							<h2>Providing a range of Events</h2>
 							<img src="{% static 'img/logo2.png' %}" alt="#">
 							<p>The best suggestions of courses saves you effort and time.</p>
 						</div>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row justify-content-center">
 					<div class="col-lg-4 col-md-6 col-12">
 						<div class="container my-5 profile-container">
-                            <h2>Course Form</h2>
+                            <h2>Events Form</h2>
                                 <form method="post" enctype="multipart/form-data" >
                                     {% csrf_token %}
                                     {% for field in form %}
