--- a/ITTHELPER/Server/Templates/addtraining.html
+++ b/ITTHELPER/Server/Templates/addtraining.html
@@ -23,7 +23,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section-title">
-                    <h2>Providing a range of courses</h2>
+                    <h2>Providing a range of Training</h2>
                     <img src="{% static 'img/logo2.png' %}" alt="#">
                     <p>The best suggestions of courses save you effort and time.</p>
                 </div>
