--- a/ITTHELPER/Server/Templates/base.html
+++ b/ITTHELPER/Server/Templates/base.html
@@ -52,6 +52,19 @@
     {% include 'navbar.html' %}
     {% block body %}
     {% endblock %}
+	<script type="text/javascript">
+  (function(d, t) {
+      var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+      v.onload = function() {
+        window.voiceflow.chat.load({
+          verify: { projectID: '6663576dc6f7b8ef04e32eb2' },
+          url: 'https://general-runtime.voiceflow.com',
+          versionID: 'production'
+        });
+      }
+      v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+  })(document, 'script');
+</script>
   </body>
     
    
